<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/Day1"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:text="@string/day_1_heavy_deadlift"
        app:layout_constraintBottom_toTopOf="@+id/Day2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/Day2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/day_2_medium_bench"
        app:layout_constraintBottom_toTopOf="@+id/Day3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Day1" />

    <Button
        android:id="@+id/Day3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/day_3_heavy_squat"
        app:layout_constraintBottom_toTopOf="@+id/Day4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Day2"
        app:layout_constraintVertical_bias="0.409" />

    <Button
        android:id="@+id/Day4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/day_4_light_bench"
        app:layout_constraintBottom_toTopOf="@+id/Day5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Day3" />

    <Button
        android:id="@+id/Day5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/day_5_medium_squat"
        app:layout_constraintBottom_toTopOf="@+id/Day6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Day4" />

    <Button
        android:id="@+id/Day6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/day_6_heavy_bench"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Day5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/click_on_the_appropriate_day_to_see_the_program_if_you_wish_to_do_less_days_i_would_recommend_cutting_the_medium_and_light_days"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>