<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/rpeBtn"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:text="@string/estimate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nextBtn"
        app:layout_constraintTop_toBottomOf="@+id/deadliftVal" />

    <TextView
        android:id="@+id/greetingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/greeting_label"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003" />

    <TextView
        android:id="@+id/squatLabel"
        android:layout_width="65dp"
        android:layout_height="40dp"

        android:layout_marginTop="240dp"
        android:gravity="center"
        android:text="@string/squat"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/squatVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="236dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/squat_val"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/squatLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/benchLabel"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/bench"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/squatLabel" />

    <EditText
        android:id="@+id/benchVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/bench_val"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/benchLabel"
        app:layout_constraintTop_toBottomOf="@+id/squatVal" />

    <TextView
        android:id="@+id/deadliftLabel"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_marginTop="22dp"
        android:gravity="center"
        android:text="@string/deadlift"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/benchLabel" />

    <EditText
        android:id="@+id/deadliftVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/deadlift_val"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/deadliftLabel"
        app:layout_constraintTop_toBottomOf="@+id/benchVal"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/aboutBtn"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:text="@string/about"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nextBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deadliftVal" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deadliftVal" />


</androidx.constraintlayout.widget.ConstraintLayout>