<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/top_set_bench_3_reps"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="161dp" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/topSetDay6"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/textview"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:layout_editor_absoluteX="42dp" />

        <TextView
            android:id="@+id/Day1TopCounter"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/deadliftTop1"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="343dp"
            tools:layout_editor_absoluteY="185dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sets_left"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="220dp"
            tools:layout_editor_absoluteY="185dp" />

        <Button
            android:id="@+id/Day1TopDecrement"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/decrement"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="212dp"
            tools:layout_editor_absoluteY="209dp" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/back_off_sets_bench_3_reps"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="316dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/backoffSetDay6"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/textview"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="384dp" />

        <TextView
            android:id="@+id/day1BackoffCounter"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/regsetval"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="317dp"
            tools:layout_editor_absoluteY="472dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sets_left"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="235dp"
            tools:layout_editor_absoluteY="472dp" />

        <Button
            android:id="@+id/day1BackoffDecrement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/decrement"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="222dp"
            tools:layout_editor_absoluteY="496dp" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/rest_timer"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="472dp" />

        <TextView
            android:id="@+id/day1CountDownTxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/timer_text"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="170dp"
            tools:layout_editor_absoluteY="472dp" />

        <Button
            android:id="@+id/day1CountDownBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            tools:layout_editor_absoluteX="73dp"
            tools:layout_editor_absoluteY="496dp" />

        <Button
            android:id="@+id/Day1topreset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            tools:layout_editor_absoluteX="162dp"
            tools:layout_editor_absoluteY="590dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="bottom">

        <Button
            android:id="@+id/Day6NextCompound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </TableRow>

</TableLayout>


